src/stderr
sigutil.c:51:21: error: use of undeclared identifier 'sigutil_context'
      {"help", 0, &(sigutil_context.action), OB_HELP},
                    ^
sigutil.c:52:25: error: use of undeclared identifier 'sigutil_context'
      {"selftest", 0, &(sigutil_context.action), OB_SELFTEST},
                        ^
sigutil.c:53:41: error: use of undeclared identifier 'sigutil_context'
      {"settings", required_argument, &(sigutil_context.action), OB_SETTINGS},
                                        ^
sigutil.c:54:42: error: use of undeclared identifier 'sigutil_context'
      {"verbosity", required_argument, &(sigutil_context.action), OB_VERBOSITY},
                                         ^
sigutil.c:67:34: error: passing 'OB_CONTEXT' to parameter of incompatible type 'OB_CONTEXT **'
  status = openbadger_initialize(*ctx, OB_SYSTEM_SETTINGS_FILE);
                                 ^~~~
../include/openbadger.h:62:40: note: passing argument to parameter 'initiaized_context' here
int openbadger_initialize(OB_CONTEXT **initiaized_context, char *settings_filename);
                                       ^
sigutil.c:76:36: error: passing 'OB_CONTEXT' to parameter of incompatible type 'OB_CONTEXT **'
    status = openbadger_initialize(*ctx, OB_LOCAL_SETTINGS_FILE);
                                   ^~~~
../include/openbadger.h:62:40: note: passing argument to parameter 'initiaized_context' here
int openbadger_initialize(OB_CONTEXT **initiaized_context, char *settings_filename);
                                       ^
6 errors generated.
make: *** [Makefile:55: sigutil.o] Error 1
